Theory read through

--- a/02_theory.tex
+++ b/02_theory.tex
@@ -214,16 +214,15 @@ The calculation of the derivatives together with a dependency graph can be seen 
 Comparing this to the method of dual numbers from \autoref{sec:DualNumbers}, where we would have to evaluate $f$ three times, this is a big improvement. This illustrates the strength of backward AD -- no matter how many input parameters a function has, you only need one function evaluation to get all the derivatives of the function. 
 
 The disadvantage of backward AD is that to be able carry along function and derivative values as we did in forward AD, we need to implement the dependency tree shown in \autoref{fig:depency_graph_backward_AD}. This makes the implementation of backward AD much harder than for forward AD, and an inefficient implementation of this tree will reduce the advantage of backward AD. Also, if $f$ is a vector-evaluated function $f: \Re^n \rightarrow \Re^m$ and not a scalar function, backward AD needs to run $m$ times. Hence, if $n\approx m$, forward AD and backward AD will have approximately the same complexity. This is the main reason why we in the following will focus on implementing forward rather than backward AD.
-\todo{HERE}
 \subsection{Forward Automatic Differentiation With Multiple Parameters}
 \label{sec:FADWithMultipleParameters}
-When we are dealing with functions with many input parameters and we wish to implement forward AD, there are alternative ways of implementing this, rather than implementing with dual numbers and evaluating the function $n$ times.  \citet{doi:10.1137/080743627} describes a method that calculates all the derivatives in one function evaluation. To illustrate this method, consider a scalar function $f: \Re^n \rightarrow \Re$, that we want to obtain the gradient of. Then, the main idea is that we define what we call our \textit{primary variables}. This is all the variables in the space that we are currently working in. Each primary variable is an AD-variable containing the derivatives of itself with respect to all the other primary variables. Say we have three variables $x$, $y$ and $z$, and for any function $f(x,y,z)$ we are interested in finding the gradient of $f$, $\nabla f=(f_x, f_y, f_z)^\top$. To achieve this, we define the corresponding AD-variables
+When we are dealing with functions with many input parameters and we wish to implement forward AD, there are alternative ways of implementing this, rather than implementing with dual numbers and evaluating the function $n$ times.  \citet{doi:10.1137/080743627} describes a method that calculates all the derivatives in one function evaluation. To illustrate this method, consider a scalar function $f: \Re^n \rightarrow \Re$, that we want to obtain the gradient of. Then, the main idea is that we define what we call our \textit{primary variables}. This is all the variables in the space that we are currently working in. Each primary variable is an AD-variable containing the derivatives of itself with respect to all the other primary variables. Say we have three variables $x$, $y$ and $z$, and for any function $f(x,y,z)$ we are interested in finding the gradient of $f$, $\nabla f=(f_x, f_y, f_z)^\top$. To achieve this, we define the corresponding primary AD-variables
 \begin{equation*}
     [\adpair{x}{(1,0,0)^\top}]\hspace{2em},\hspace{2em}
     [\adpair{y}{(0,1,0)^\top}]\hspace{2em},\hspace{2em}
     [\adpair{z}{(0,0,1)^\top}].
 \end{equation*}
-Each primary AD-variable now not only stores its derivative with respect to itself, but also the gradient with respect to all other primary variables. The operators defined in (\ref{eq:arithmeticOperators}) and the elementary functions in (\ref{eq:elementaryFunctions}) are still valid, except that scalar products are now vector products. As an example, let $f(x,y,z) = xyz$ and $x = 1$, $y = 2$ and $z = 3$, then
+Each primary AD-variable now not only store its derivative with respect to itself, but also the gradient with respect to all other primary variables. The operators defined in (\ref{eq:arithmeticOperators}) and the elementary functions in (\ref{eq:elementaryFunctions}) are still valid, except that scalar products are now vector products. As an example, let $f(x,y,z) = xyz$ and $x = 1$, $y = 2$ and $z = 3$, then
 \begin{align*}
     xyz &= [\adpair{1}{(1,0,0)^\top}]\cdot [\adpair{2}{(0,1,0)^\top}]\cdot
     [\adpair{3}{(0,0,1)^\top}] \\
@@ -237,7 +236,7 @@ This result is equal to the tuple
 for the corresponding $x$, $y$ and $z$ values. 
 \subsection{Forward Automatic Differentiation With Vector Functions}
 \label{sec:FADWithVectorParameters}
-For numerical solution of (Partial) Differential Equations, the functions we evaluate as part of the discretization are usually vector functions and not scalar functions. Hence $f: \Re^n \rightarrow \Re^m$. Neidinger's method still applies, only that the primary variables are now vectors and instead of containing the gradient of itself with respect to all the other primary variables, we now have the Jacobian. For a function $f$, the Jacobian with respect to its $n$ primary variables is given as
+For numerical solution of (Partial) Differential Equations, the functions we evaluate as part of the discretization are usually vector functions and not scalar functions: $f: \Re^n \rightarrow \Re^m$. Neidinger's method still applies, with primary AD-variables now being a tuple with a vector in the first element and instead of the gradient in the second, it is now the Jacobian. For a function $f$, the Jacobian with respect to $n$ primary variables is given as
 \begin{align*}
     J_f  =
     \begin{pmatrix}
@@ -246,7 +245,7 @@ For numerical solution of (Partial) Differential Equations, the functions we eva
         \frac{\partial f_m}{\partial x_1} & \dotsb & \frac{\partial f_m}{x_n}
     \end{pmatrix}.
 \end{align*}
-The forward AD method described earlier will be similar for a vector function as it was for a scalar function. However, going from scalar functions with multiple parameters to vector functions induce two important differences. The first is that the primary variables need to be initialized with their Jacobians, and not just with a gradient vector. The Jacobian for a primary variable of dimension $n$ is the $n \times n$ identity matrix. The second change is that when evaluating new functions depending on the primary variables, the Jacobians corresponding to the functions will be calculated with matrix multiplication instead of the vector multiplication seen in the previous example. As a simple illustration of the differences, consider the vector function $f = 2\cdot \textbf{x}\cdot \textbf{y}$ for primary variables $\textbf{x},\textbf{y}\in \Re^3$ (we only consider element-wise multiplication). Initialization of the primary variables gives
+The forward AD method described earlier will be similar for a vector function as it was for a scalar function. However, going from scalar functions with multiple parameters to vector functions induce two important differences. The first is that the primary variables need to be initialized with their Jacobians, and not just with a gradient vector. The Jacobian for a primary variable of dimension $n$ is the $n \times n$ identity matrix. The second change is that when evaluating new functions depending on the primary variables, the Jacobians corresponding to the functions will be calculated with matrix multiplication, instead of vector multiplications as seen in the previous example. As a simple illustration of the differences, consider the vector function $f = 2\cdot \textbf{x}\cdot \textbf{y}$ for primary variables $\textbf{x},\textbf{y}\in \Re^3$ (we only consider element-wise multiplication). Initialization of the primary variables gives
 \begin{equation}
     \label{def:VectorAD}
     \textbf{x} = \left[\adpair{\begin{pmatrix}1\\2\\3
@@ -261,7 +260,7 @@ The forward AD method described earlier will be similar for a vector function as
     0&0&0&0&1&0\\
     0&0&0&0&0&1\end{pmatrix}} \right].
 \end{equation}
-Here, we have decided an order of the variables in the Jacobian, and further on, we need to be consistent with this order. The function value of $\textbf{x}\cdot\textbf{y}$ is found by normal element-wise multiplication. The Jacobian of $\textbf{x}\cdot\textbf{y}$ is obtained by using the chain rule as defined in \eqref{eq:arithmeticOperators}. The difference is now that we have \emph{element-wise} multiplication of a vector and a matrix instead of only scalars or scalars and vectors. Element-wise multiplication corresponds to transforming the vector to an $n\times n$ matrix with the values on the diagonal. The calculations give
+Here, we have decided an order of the variables in the Jacobian, and further on, we need to be consistent with this order. The function value of $\textbf{x}\cdot\textbf{y}$ is found by normal element-wise multiplication. The Jacobian of $\textbf{x}\cdot\textbf{y}$ is obtained by using the chain rule as defined in \eqref{eq:arithmeticOperators}. The difference is now that we have element-wise multiplication of a vector and a matrix. Element-wise multiplication of a vector and matrix corresponds to transforming the vector to an $n\times n$ matrix with the values on the diagonal. The calculations give
 \begin{align*}
     \textbf{x}\cdot\textbf{y} &= \left[\adpair{\begin{pmatrix}
         1\\2\\3
@@ -338,7 +337,7 @@ which we can write on residual form such that
 \begin{equation*}
 	\boldsymbol{F}(\boldsymbol{x}) = \textbf{A}\boldsymbol{x} - \boldsymbol{b} = 0 .
 \end{equation*}
-This means that to solve the linear system in \myeqref{eq:linearSystem}, we need to find the root of $\boldsymbol{F}(\boldsymbol{x})$. This can be done by choosing an initial value $\boldsymbol{x}^0$ and observe that since $\boldsymbol{F}(\boldsymbol{x})$ is linear, the corresponding multivariate Newton-Raphson method will converge in one step. The general form of the multivariate Newton-Raphson method is given by
+This means that to solve the linear system in \myeqref{eq:linearSystem}, we need to find the root of $\boldsymbol{F}(\boldsymbol{x})$. By choosing an initial value $\boldsymbol{x}^0$ and observe that since $\boldsymbol{F}(\boldsymbol{x})$ is linear, the corresponding multivariate Newton-Raphson method will converge in one step. The general form of the multivariate Newton-Raphson method is given by
 \begin{equation}
 	\boldsymbol{x}^{n+1} = \boldsymbol{x}^n - J_{\boldsymbol{F}}  (\boldsymbol{x}^n)^{-1} \boldsymbol{F}(\boldsymbol{x}^n).
     \label{eq:newtonRaphsonVector}
@@ -347,12 +346,12 @@ Here, $J_{\boldsymbol{F}}  (\boldsymbol{x}^n)^{-1}$ is the inverse of the Jacobi
 
 \subsection{Solving the Poisson Equation}
 \label{sec:poissonEq}
-For a simple linear system like \myeqref{eq:linearSystem} it may seem a bit forced and unnecessary to make the effort of using AD to solve for $\boldsymbol{x}$. We could just as well have used some built in linear solver. But for applications to the numerical solution of PDEs, this approach greatly simplifies the process of (linearizing and) assembling the linear systems that appear when you solve the (non)linear system of discretized equations. Indeed, using \myeqref{eq:newtonRaphsonVector} with AD, all you have to do is implement the discretized equations on residual form.  As a preface to introducing how we will do this, we consider the Poisson equation
+For a simple linear system like \myeqref{eq:linearSystem} it may seem a bit unnecessary to make the effort of using AD to solve for $\boldsymbol{x}$. We could just as well have used some built in linear solver. But for applications to the numerical solution of PDEs, this approach greatly simplifies the process of (linearizing and) assembling the linear systems that appear when you solve the (non)linear system of discretized equations. Indeed, using \myeqref{eq:newtonRaphsonVector} with AD, all you have to do is implement the discretized equations on residual form.  As a preface to introducing how we will do this, we consider the Poisson equation
 \begin{equation}
     -\nabla(\textbf{K}\nabla u) = q,
     \label{eq:Poisson}
 \end{equation}
-where \textbf{K} is a spatially variable coefficient, and we want to find $u$ on the domain $\Omega \in \Re^d$. Numerically, this can be done by using a finite volume method. This approach is based on applying conservation laws inside the domain. By dividing the domain into a grid of smaller cells, $\Omega_i$, we can instead of looking at the Poisson equation in differential form, integrate it over each cell such that
+where \textbf{K} is a spatially variable coefficient, and we want to find $u$ on the domain $\Omega \in \Re^d$. Numerically, this can be done by using a finite volume method. This approach is based on applying conservation laws inside the domain. By dividing the domain into a grid of smaller cells, $\Omega_i$, we can instead of looking at the Poisson equation in differential form, integrate it over each cell, such that
 \begin{equation}
     \int_{\partial\Omega_i}\!\!- \textbf{K} \nabla u \cdot \textbf{n}\, \mbox{ds} = \int_{\Omega_i} q \,\mbox{dA}.
     \label{eq:conservation}
@@ -410,13 +409,13 @@ where $q_i$ is the integrated accumulation over cell $\Omega_i$. Now, we can get
     \end{array}
     \right.
 \end{align*}
-This means we can solve the Poisson \myeqref{eq:Poisson}, using the scheme explained in \eqref{eq:newtonRaphsonVector} and by having $u$ as an AD-variable. For this simple Poisson equation, we still only end up with a linear system of equations that we may as well solve without AD. The only benefit is that we never need to form the matrix $\mathbf{A}$ explicitly, which can be bit complicated for more complex grids. For nonlinear PDEs, we would also need to linearize the local discrete equations, and the construction of the matrix \textbf{A} generally becomes more tricky.  The ease of using AD becomes clearer when we combine it with discrete differentiation operators that we will define in the next subsection.
+This means we can solve the Poisson \myeqref{eq:Poisson}, using the scheme explained in \eqref{eq:newtonRaphsonVector} and by having $u$ as an AD-variable. For this simple Poisson equation, we still only end up with a linear system of equations that we may as well solve without AD. The only benefit is that we never need to form the matrix $\mathbf{A}$ explicitly, which can be bit complicated for more complex grids. For nonlinear PDEs, we would also need to linearize the local discrete equations, and the construction of the matrix \textbf{A} generally becomes more tricky.  The ease of using AD becomes clearer when we combine it with the discrete differentiation operators that will be defined in the next subsection.
 
 \subsection{Discrete Differentiation Operators}
 \label{sec:DiscreteOperators}
 To show the real elegance of using AD to solve PDEs, we want to create a framework in which we have defined discrete divergence and gradient operators such that we can write the discrete equations we want to solve on a similar form as in the continuous case. We also want to be able to do this no matter how complex and unstructured our grid is.
 
-Instead of the simple two-cell grid we used in \autoref{fig:gridTwoCells}, we now consider a a general polygonal grid. \autoref{fig:partialGrid} illustrates an example, in which all cells are quadrilaterals. To define the discrete divergence and gradient operators, we need some information about the topology of the grid. The grid can be described in terms of three types of objects: cells, facets and vertices. The cells are each $\Omega_i \subset \Omega$. In our two-dimensional case, the facets are simply the lines that delimit each cell, and the vertices are the endpoints of each facet. In addition, we introduce nodes. In the case demonstrated by \autoref{fig:gridTwoCells}, we had two nodes, $u_i$ and $u_k$, and for the finite-volume method they are the average value of $u$ on the corresponding cell. Each cell and facet has physical properties like area or length, and centroid or centre. Each facet also has a normal vector. 
+Instead of the simple two-cell grid we used in \autoref{fig:gridTwoCells}, we now consider a general polygonal grid. \autoref{fig:partialGrid} illustrates an example, in which all cells are quadrilaterals. To define the discrete gradient- and divergence operator, we need some information about the topology of the grid. The grid can be described in terms of three types of objects: cells, facets and vertices. The cells are each $\Omega_i \subset \Omega$. In our two-dimensional case, the facets are simply the lines that delimit each cell, and the vertices are the endpoints of each facet. In addition, we introduce nodes. In the case demonstrated by \autoref{fig:gridTwoCells}, we had two nodes, $u_i$ and $u_k$, and for the finite-volume method they are the average value of $u$ on the corresponding cell. Each cell and facet has physical properties like area or length, and centroid or centre. Each facet also has a normal vector. 
 \begin{figure}[H]
     \centering
     \includegraphics[width = 0.7\textwidth]{figures/grid_cells_facets.pdf}
@@ -424,7 +423,7 @@ Instead of the simple two-cell grid we used in \autoref{fig:gridTwoCells}, we no
     \label{fig:partialGrid}
 \end{figure}
 
-\autoref{fig:partialGrid} shows how we can introduce two different mappings that explain the relation between the cells and the facets. The mappings for cells 5 and 8 are written out. The first relation, $F(c)$, is the mapping from cells $c$ to their delimiting facets $f$. The second mapping, $C_i(f)$ for $i = 1,2$, is a mapping from a facet $f$ to the two cells $C_1$ and $C_2$ that share this facet. All these properties will be used to create the discrete divergence and gradient operators.
+\autoref{fig:partialGrid} shows how we can introduce two different mappings that explain the relation between the cells and the facets. The mappings for cell 5 and 8 are displayed to the right. The first relation, $F(c)$, is the mapping from cell $c$ to their delimiting facets $f$. The second mapping, $C_i(f)$ for $i = 1,2$, is a mapping from a facet $f$ to the two cells $C_1$ and $C_2$ that share this facet. All these properties will be used to create the discrete divergence and gradient operators.
 
 We now have all the physical properties of the grid we used to attain the formulae in \myeqref{eq:PoissonSolvableTwoCells}. From these, we want to create discrete divergence and gradient operators that correspond to the continuous equivalents for this grid. Consider the Poisson \myeqref{eq:Poisson} for the function $u$. Then the discrete gradient operator for a facet $f$ is defined as 
 \begin{equation}
@@ -452,4 +451,4 @@ The extra \texttt{d} in front of the names stands for discrete and is included s
     \textbf{F}(\textbf{u}) = \texttt{dDiv}(\textbf{T }\texttt{dGrad}(\textbf{u}))-\textbf{q} 
     = 0.
 \end{align*}
-Here, \textbf{T} is the transmissibility defined in \eqref{eq:transmissibility}. The notation for the discrete equations is clearly similar to the continuous case, and we can actually read the discrete expression and directly understand what equation we are trying to solve. For this simple Poisson equation, we will still have a linear system and we would not necessarily need to use AD to solve it. But for more complex problems, we can derive the discrete divergence and gradient operators in the same approach for any type of grid. Although the system then becomes non-linear, it will be easy to solve using AD and the Newton-Raphson method. An example of this can be seen in \autoref{ch:FlowSolver}.
+Here, \textbf{T} is the transmissibility defined in \eqref{eq:transmissibility}. The notation for the discrete equations is clearly similar to the continuous case, and we can actually read the discrete expression and directly understand what equation we are trying to solve. For this simple Poisson equation, we will still have a linear system and we would not necessarily need to use AD to solve it. But for more complex problems, we can derive the discrete divergence and gradient operators in the same approach for any type of grid and even though the system is non-linear, it will be easy to solve using AD and the Newton-Raphson method. An example of this can be seen in \autoref{ch:FlowSolver}.
