--- a/04_implementation.tex
+++ b/04_implementation.tex
@@ -4,9 +4,9 @@ This chapter will give implementation-specific details on how to implement AD in
 
 \section{Automatic Differentiation in Julia}
 \label{sec:ADInJulia}
-As discussed in \autoref{ch:Julia}, Julia seems to be the perfect language for numerical applications and it would be interesting to see how it performs compared to MATLAB. For AD there are already some third-party packages in Julia that can be used. Most of them are backward AD-packages designed for machine learning. Two examples are AutoGrad \citep{knet2016mlsys} and Zygote \citep{innes2018don}. The reason why AD-packages for machine learning are based on backward AD is that machine learning, without going to deep into the subject, largely amounts to the minimization of functions with a large number of input parameters, but with only one output parameter. As discussed in \autoref{sec:BackwardAD}, backward AD is much more efficient than forward AD in these types of evaluations. For numerical applications there is usually many input parameters and output parameters. Hence there is no clear advantage of using backward AD compared to forward AD. 
+As discussed in \autoref{ch:Julia}, Julia seems to be the perfect language for numerical applications and it would be interesting to see how it performs compared to MATLAB. There are already some third-party AD-packages in Julia that can be used. Most of them are backward AD-packages designed for machine learning. Two examples are AutoGrad \citep{knet2016mlsys} and Zygote \citep{innes2018don}. The reason why AD-packages for machine learning are based on backward AD is that machine learning, without going to deep into the subject, largely amounts to the minimization of functions with a large number of input parameters, but with only one output parameter. As discussed in \autoref{sec:BackwardAD}, backward AD is much more efficient than forward AD in these types of evaluations. For numerical applications there are usually many input parameters and output parameters. Hence there is no clear advantage of using backward AD compared to forward AD. 
 
-There is one package called \textit{ForwardDiff} \citep{ForwardDiff} being developed by the Julia community that uses forward AD. ForwardDiff relies on dual numbers as explained in \autoref{sec:DualNumbers} extended to multiple dimensions. This is called multidimensional dual numbers and a vector \textbf{x} of length $n$ is represented as
+There is one package called \textit{ForwardDiff} \citep{ForwardDiff} being developed by the Julia community that uses forward AD. ForwardDiff relies on dual numbers, as explained in \autoref{sec:DualNumbers}, extended to multiple dimensions. This is called multidimensional dual numbers and a vector \textbf{x} of length $n$ is represented as
 \begin{align*}
     \textbf{x} = \begin{bmatrix}
     x_1 + \epsilon_1 \\
@@ -16,16 +16,16 @@ There is one package called \textit{ForwardDiff} \citep{ForwardDiff} being devel
     x_n + \epsilon_n \\
     \end{bmatrix}.
 \end{align*}
- This package works very well for some applications, but especially for numerical solution of PDEs it has some limitations that are not ideal. Examples of this are: 
+ This package works very well for some applications, but especially for numerical solution of PDEs it has some limitations that are not ideal. Examples are 
 \begin{itemize}
     \item The function to differentiate can only accept a single argument. This is possible to work around; if you have vector function $f$ with input parameters $x,y,z \in \Re^n$, you can merge them into one vector of length $3n$ and then obtain the Jacobian. Although this works and you get the correct answer, it is not optimal as you would have to make local workarounds to make the code work, causing unreadable code.
     \item The function we want to differentiate must be on the form of a generic Julia function, such as: $g(x) = 3x*x$. Here $x*x$ symbolize element-wise multiplication. This means that if we have a function like $h(x) = 3x*x + \text{sum}(x)$, where all elements in $g(x)$ are added with the sum of all elements in $x$, it will not be possible to use \textit{ForwardDiff} to obtain the Jacobian. This limitation also prevents us from having a function that we evaluate for all points, and then add boundary conditions for some points later. This is a feature that is essential in PDE-based simulators.
-    \item The Jacobian calculated by \textit{ForwardDiff} is a full matrix. In some cases the Jacobian is dense anyway, so this will not have any major adverse effects, but in many numerical applications, and particularly in numerical solution of PDEs, the Jacobian will be sparse. By representing a sparse matrix on a full matrix format, a lot of potential computation efficiency is lost.
+    \item The Jacobian calculated by \textit{ForwardDiff} is a full matrix. In some cases the Jacobian is dense anyway, so this will not have any major adverse effects, but in many numerical applications, and particularly in numerical solution of PDEs, the Jacobian will be sparse. By representing a sparse matrix on a full matrix format, a lot of potential computational efficiency is lost.
 \end{itemize}
 
 \section{Implementation of Automatic Differentiation}
 \label{sec:ImplementationAD}
-When it comes to efficient implementation of AD, there are two factors to consider. Firstly, it must be easy and intuitive to use. Secondly, the code must be efficient as it will be used in computational demanding calculations. A convenient way to store the AD-variables in Julia is to make a structured array (\texttt{struct}) that has two member variables, \texttt{val} and \texttt{jac}, that store respectively the value and the corresponding Jacobian: 
+When it comes to efficient implementation of AD, there are two factors to consider. Firstly, it must be easy and intuitive to use. Secondly, the code must be efficient as it will be used in computational demanding calculations. A convenient way to store the AD-variables in Julia is to make a structured array (struct) that has two member variables, \texttt{val} and \texttt{jac}, that store respectively the value and the corresponding Jacobian
 \lstinputlisting{code/AD_struct.jl} 
 The \texttt{val} variable is a vector with elements of type \texttt{Float64}. If the AD-variable is only a scalar, the implementation can either stick to \texttt{val} being a vector of length one, or it can be a scalar. Always representing \texttt{val} as a vector is most consistent and can avoid problems that may occur when we do not know what types the AD struct contains at different times. When it comes to the Jacobian, there are multiple ways of storing the matrix. Depending on the application, how much, and what type of manipulation of the matrix you are going to do, the choice is based on efficiency and convenience. I will describe two different methods on how to store the Jacobian. Both implementations are inspired by two different implementations in MRST \citep{lieMrstUrl}. 
 
