Updates from Overleaf

--- a/04_implementation.tex
+++ b/04_implementation.tex
@@ -25,9 +25,9 @@ There is one package called \textit{ForwardDiff} \citep{ForwardDiff} being devel
 
 \section{Implementation of Automatic Differentiation}
 \label{sec:ImplementationAD}
-When it comes to efficient implementation of AD, there are two factors to consider. Firstly, it must be easy and intuitive to use. Secondly, the code must be efficient as it will be used in computational demanding calculations. A convenient way to store the AD-variables in Julia is to make a structured array (struct) that has two member variables, \texttt{val} and \texttt{jac}, that store respectively the value and the corresponding Jacobian
+When it comes to efficient implementation of AD, there are two factors to consider. Firstly, it must be easy and intuitive to use. Secondly, the code must be efficient as it will be used in computational demanding calculations. A convenient way to store the AD-variables in Julia is to make a structured array (struct) that has two member variables, \texttt{val} and \texttt{jac}, that store respectively the values and the corresponding Jacobian
 \lstinputlisting{code/AD_struct.jl} 
-The \texttt{val} variable is a vector with elements of type \texttt{Float64}. If the AD-variable is only a scalar, the implementation can either stick to \texttt{val} being a vector of length one, or it can be a scalar. Always representing \texttt{val} as a vector is most consistent and can avoid problems that may occur when we do not know what types the AD struct contains at different times. When it comes to the Jacobian, there are multiple ways of storing the matrix. Depending on the application, how much, and what type of manipulation of the matrix you are going to do, the choice is based on efficiency and convenience. I will describe two different methods on how to store the Jacobian. Both implementations are inspired by two different implementations in MRST \citep{lieMrstUrl}. 
+The \texttt{val} variable is a vector with elements of type \texttt{Float64}. If the AD-variable is only a scalar, the implementation can either stick to \texttt{val} being a vector of length one, or it can be a scalar. Always representing \texttt{val} as a vector is most consistent and can avoid problems that may occur when we do not know what types the AD struct contains at different times. When it comes to the Jacobian, there are multiple ways of storing the matrix. Depending on the application, how much, and what type of manipulation of the matrix you are going to do, the choice is based on efficiency and convenience. I will describe two different methods on how to store the Jacobian. Both implementations are inspired by two different implementations in MRST. 
 
 \subsection{\texttt{ForwardAutoDiff} (\texttt{FAD})}
 \label{sec:FAD}
