--- a/03_julia.tex
+++ b/03_julia.tex
@@ -14,7 +14,7 @@ The next translation difference between the languages is whether it is compiled 
 
 \subsection{Languages for Numerical applications}
 \label{sec:numericalLang}
-For numerical applications we can separate the most commonly used languages into two groups. The first group is static and compiled languages like C and C++. These are languages that execute very fast but the time it takes to make the programs are longer. The second group are dynamic and interpreted languages like the well known MATLAB and Python (in 2015 MATLAB introduced a new execution engine that uses JIT compilation \emph{\citep{MatlabJIT}}. However, MATLAB is still a dynamic language that function like a fully interpreted language). These languages are easier to use if you want to create numerical simulations, but they execute slower than C and C++. Julia is a dynamic, but (JIT)compiled language. As the creators said in the blog post from 2012: Julia is supposed to have \enquote{(...) familiar mathematical notation like Matlab}, be \enquote{(...) as  powerful  for  linear  algebra  as Matlab} and at the same time be as fast as C. Summed up their goal has been to make a language that is as easy to use as an interpreted and dynamic language, but with the speed of a compiled and static language. Based on this description, Julia seems to be the perfect language for numerical simulations.
+For numerical applications we can separate the most commonly used languages into two groups. The first group is static and compiled languages like C, C++ and Fortran. These are languages that execute very fast but the time it takes to make the programs are longer. The second group are dynamic and interpreted languages like the well known MATLAB and Python (in 2015 MATLAB introduced a new execution engine that uses JIT compilation \emph{\citep{MatlabJIT}}. However, MATLAB is still a dynamic language that function like a fully interpreted language). These languages are easier to use if you want to create numerical simulations, but they execute slower than C and C++. Julia is a dynamic, but (JIT)compiled language. As the creators said in the blog post from 2012: Julia is supposed to have \enquote{(...) familiar mathematical notation like Matlab}, be \enquote{(...) as  powerful  for  linear  algebra  as Matlab} and at the same time be as fast as C. Summed up their goal has been to make a language that is as easy to use as an interpreted and dynamic language, but with the speed of a compiled and static language. Based on this description, Julia seems to be the perfect language for numerical simulations.
 
 \subsection{Source Code Example}
 So far in this chapter, I have discussed what separates the languages concerning type checking and how the source code is translated to machine code. These differences will in return affect the syntax of the languages and how we can write the source code. Below I have an example illustrating different implementations of an example in Julia, MATLAB and C++. The example consist of writing a program that creates two random vectors of length $n$, element-wise multiply them together and print the resulting vector in a readable way. This example is first implemented in Julia, where the random vector is created using \texttt{rand(n)}, the element-wise multiplication is performed with the \texttt{.*} operator and the result is printed with the \texttt{println(...)} function:
