--- a/05_flow_solver_with_AD.tex
+++ b/05_flow_solver_with_AD.tex
@@ -57,7 +57,7 @@ for the fluid density given by \myeqref{eq:pressureSolverDensity} and $g$ as the
         \caption{Reservoir grid plotted with initial pressure and well P1. Pressure is given in bar. The well covers 8 grid elements. Some grid elements are removed to give a better visualization of the well.}
         \label{fig:flowSolverGridWithWell}
     \end{subfigure}
-    \caption{}
+    \caption{Samle}
 \end{figure}
 
 \section{Setup of Governing Equations}
@@ -165,7 +165,7 @@ To benchmark the different methods, we need to do some extra work to make sure t
 For 10 cells in each spatial direction, it is clear that what was assumed based on the structure of the Jacobian in \autoref{fig:flowSolverJacobian} is true; The  \texttt{ForwardDiff} method takes much longer time than  \texttt{FAD}, \texttt{CJAD} and \texttt{MRST}. This also correspond to the result seen in \autoref{fig:benchmarkADVectorFunction}. Since \texttt{ForwardDiff} already spends over a minute for $10\times 10\times 10$ cells, it is omitted for finer discretizations. \texttt{MRST\_diagonal} is not presented here because there is a bug that cause the method to fail for this specific example, and the only fix we have found makes the method very similar to \texttt{MRST}. According to the results in \autoref{tab:FlowSolverSpeedTest}, the \texttt{CJAD} method is a bit faster than  \texttt{FAD}, and it perform similar to \texttt{MRST} method. 
 
 It is, although, still some uncertainty in these numbers as we do not know if the linear solver in MATLAB and Julia perform equally well. In addition, another factor that can affect the result, is that for the current hardware these benchmarks are running on, the computations are so demanding that the hardware becomes warm. This can cause the performance of the hardware to decrease and ruin the benchmark results. To remove the uncertainty of both the linear solver and the hardware heating up, we can perform another benchmark. Instead of solving the linear system \texttt{f.jac\textbackslash f.val} and continuing to the next Newton-Raphson iteration until it converges, and then onto a new time step, we only assemble the first residual function multiple times. In this way we only benchmark the AD part of the problem. The time the computer uses to calculate the residual function value and Jacobian will not depend on what type of numbers we have, only on the structure of the matrices in the Jacobians. Since the structure is the same throughout the whole simulation, this benchmark will still be relevant to figure out which AD-implementation is best to solve this specific problem. Since the benchmark does the same calculation over and over again, we need to be aware that it could have been the case that the compiler figured out that there is no need to perform all calculations, and that it is enough doing it only once. However, this is tested and is not the case. \autoref{tab:FlowSolverAssemblyTest} shows the three methods assembling the first residual function of the simulation 100 times.
-\begin{table}[htb]
+\begin{table}[b]
     \centering
     \caption{Table with speed tests of different AD methods assembling the "Single-Phase Compressible AD Solver" residual function 100 times for different discretizations.}
     \label{tab:FlowSolverAssemblyTest}
